@@ -17,75 +17,79 @@
 #ifndef _NEKO_OPCODES_H
 #define _NEKO_OPCODES_H
 
-enum OPCODE {
-	AccNull,
-	AccTrue,
-	AccFalse,
-	AccThis,
-	AccInt,
-	AccStack,
-	AccGlobal,
-	AccEnv,
-	AccField,
-	AccArray,
-	AccIndex,
-	AccBuiltin,
-	SetStack,
-	SetGlobal,
-	SetEnv,
-	SetField,
-	SetArray,
-	SetIndex,
-	SetThis,
-	Push,
-	Pop,
-	Call,
-	ObjCall,
-	Jump,
-	JumpIf,
-	JumpIfNot,
-	Trap,
-	EndTrap,
-	Ret,
-	MakeEnv,
-	MakeArray,
-	Bool,
-	IsNull,
-	IsNotNull,
-	Add,
-	Sub,
-	Mult,
-	Div,
-	Mod,
-	Shl,
-	Shr,
-	UShr,
-	Or,
-	And,
-	Xor,
-	Eq,
-	Neq,
-	Gt,
-	Gte,
-	Lt,
-	Lte,
-	Not,
-	TypeOf,
-	Compare,
-	Hash,
-	New,
-	JumpTable,
-	Apply,
-	AccStack0,
-	AccStack1,
-	AccIndex0,
-	AccIndex1,
-	PhysCompare,
-	TailCall,
+#ifndef OP
+#	define OP(x)	x
+#	define OPBEGIN	enum OPCODE {
+#	define OPEND	};
+#endif
+OPBEGIN
+	OP(AccNull),
+	OP(AccTrue),
+	OP(AccFalse),
+	OP(AccThis),
+	OP(AccInt),
+	OP(AccStack),
+	OP(AccGlobal),
+	OP(AccEnv),
+	OP(AccField),
+	OP(AccArray),
+	OP(AccIndex),
+	OP(AccBuiltin),
+	OP(SetStack),
+	OP(SetGlobal),
+	OP(SetEnv),
+	OP(SetField),
+	OP(SetArray),
+	OP(SetIndex),
+	OP(SetThis),
+	OP(Push),
+	OP(Pop),
+	OP(Call),
+	OP(ObjCall),
+	OP(Jump),
+	OP(JumpIf),
+	OP(JumpIfNot),
+	OP(Trap),
+	OP(EndTrap),
+	OP(Ret),
+	OP(MakeEnv),
+	OP(MakeArray),
+	OP(Bool),
+	OP(IsNull),
+	OP(IsNotNull),
+	OP(Add),
+	OP(Sub),
+	OP(Mult),
+	OP(Div),
+	OP(Mod),
+	OP(Shl),
+	OP(Shr),
+	OP(UShr),
+	OP(Or),
+	OP(And),
+	OP(Xor),
+	OP(Eq),
+	OP(Neq),
+	OP(Gt),
+	OP(Gte),
+	OP(Lt),
+	OP(Lte),
+	OP(Not),
+	OP(TypeOf),
+	OP(Compare),
+	OP(Hash),
+	OP(New),
+	OP(JumpTable),
+	OP(Apply),
+	OP(AccStack0),
+	OP(AccStack1),
+	OP(AccIndex0),
+	OP(AccIndex1),
+	OP(PhysCompare),
+	OP(TailCall),
 
-	Last,
-};
-
+	OP(Last),
+OPEND
 
 #ifdef PARAMETER_TABLE
 static int parameter_table[] = {
